--- a/squadFindr.css
+++ b/squadFindr.css
@@ -1,10 +1,15 @@
 body {
 	text-align: center;
 }
+
 h1 {
 
 }
 
+#playerSearch {
+	display: block;
+	text-align: center;
+}
 
 #profileObject {
 	width: 400px; 
@@ -15,7 +20,6 @@ h1 {
 }
 #profileViewer {
 	float: left;
-	
 }
 #playerInfo {
 	float: left;
